--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.0"
 publish = false
 edition = "2024"
 
+[package.metadata]
+cargo-fuzz = true
+
 [dependencies]
 libfuzzer-sys = "0.4"
 sdjournal = { path = "../crates/sdjournal" }
@@ -14,4 +17,3 @@ name = "journal_open"
 path = "fuzz_targets/journal_open.rs"
 test = false
 doc = false
-
