--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ resolver = "3"
 [workspace.package]
 edition = "2024"
 rust-version = "1.92.0"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 
 [workspace.dependencies]
 hmac = { version = "0.12.1", default-features = false, features = ["std"] }
