--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,18 @@ jobs:
       - name: cargo fmt
         run: cargo fmt --all -- --check
 
+      - name: cargo clippy (no default features)
+        run: cargo clippy --workspace --all-targets --no-default-features -- -D warnings
+
+      - name: cargo test (no default features, lib)
+        run: cargo test -p sdjournal --lib --no-default-features
+
+      - name: cargo check (no default features + tokio)
+        run: cargo check -p sdjournal --no-default-features --features tokio
+
+      - name: cargo check (no default features + verify-seal)
+        run: cargo check -p sdjournal --no-default-features --features verify-seal
+
       - name: cargo clippy
         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
